test/conformance/chainsaw/validate/clusterpolicy/standard/audit/configmap-context-lookup/02-goodpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-cm-lookup-pod
  namespace: test-cm-lookup
  labels:
    foo: bar
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: nginx
    name: test-cm-lookup
