test/conformance/chainsaw/validate/clusterpolicy/standard/audit/configmap-context-lookup/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: keys
  namespace: test-cm-lookup
