test/conformance/chainsaw/validate/clusterpolicy/standard/audit/configmap-context-lookup/chainsaw-step-01-apply-1-3.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-labels
spec:
  background: true
  rules:
  - context:
    - configMap:
        name: keys
        namespace: test-cm-lookup
      name: keys
    match:
      any:
      - resources:
          kinds:
          - Pod
    name: validate-labels
    validate:
      validationFailureAction: Audit
      pattern:
        metadata:
          labels:
            foo: '{{ keys.data.foo }}'
