test/conformance/chainsaw/validate/clusterpolicy/standard/audit/configmap-context-lookup/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: configmap-context-lookup
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: validate-labels
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
  - name: step-03
    try:
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
